Improve secondary button contrast

--- a/index.html
+++ b/index.html
@@ -63,15 +63,16 @@
       font-weight: 700;
       text-decoration: none;
       cursor: pointer;
+      color: inherit;
     }
     .btn.primary {
       background: #22c55e;
       color: #0f172a;
     }
     .btn.secondary {
-      background: transparent;
-      border-color: #93c5fd;
-      color: #e0f2fe;
+      background: #f8fafc;
+      border-color: #cbd5e1;
+      color: #0f172a;
     }
     .meta-line {
       display: flex;
