Auto-close auth modal after sending magic link

--- a/index.html
+++ b/index.html
@@ -799,6 +799,9 @@
         return;
       }
       authStatus.textContent = 'Magic link sent. Check your email and return to continue.';
+      setTimeout(() => {
+        closeAuthModal();
+      }, 800);
     });
 
     authCancel.addEventListener('click', () => {
