Revert secondary button contrast to prior style

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
       color: #0f172a;
     }
     .btn.secondary {
-      background: #f8fafc;
-      border-color: #cbd5e1;
-      color: #0f172a;
+      background: transparent;
+      border-color: #93c5fd;
+      color: #e0f2fe;
     }
     .meta-line {
       display: flex;
